# legal-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  BEST_PRACTICES_SETUP_AND_ARCHITECTURE.md  DAGSTER.md  FRAMEWORK_EXPLANATION.md  MONGODB_CONNECTIONS.md  Makefile  POETRY_SETUP.md  README.md  REVIEW.md  TASK_EXPLANATION.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
app/: constants.py
app/domain/: entities.py  enums.py  schemas.py
app/repositories/: curated_metadata_repository.py  landing_metadata_repository.py  metadata_repository.py
app/services/: html_cleaning_service.py  ingestion_service.py  partition_service.py  transformation_service.py
app/storage/: local_fs_store.py  minio_store.py  object_store.py
app/utils/: dates.py  filenames.py  hashing.py  json_logger.py
config/: logging.py  partitions.py  settings.py
docker/mongodb/init/: 01-create-app-user.js
infra/minio/: init-minio.sh
infra/mongo/: indexes.js  init-mongo.js
legal_cases_scraper/: scrapy.cfg
legal_cases_scraper/legal_cases_scraper/: extractors.py  items.py  pipelines.py  settings.py
legal_cases_scraper/legal_cases_scraper/spiders/: legal_cases_spider.py
orchestrator/dagster_project/: definitions.py  resources.py
orchestrator/dagster_project/assets/: landing_zone.py  processed_zone.py
orchestrator/dagster_project/jobs/: full_pipeline_job.py  scrape_job.py  transform_job.py
orchestrator/dagster_project/ops/: publish_curated_metadata.py  run_scrapy_spider.py  transform_html_files.py
orchestrator/dagster_project/schedules/: monthly_schedule.py
scrapy_project/: scrapy.cfg
scrapy_project/legal_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_project/legal_scraper/extensions/: stats_exporter.py
scrapy_project/legal_scraper/models/: metadata.py
scrapy_project/legal_scraper/parsers/: document_page_parser.py
scrapy_project/legal_scraper/services/: dedup_service.py  downloader.py  hash_service.py  item_cleaner.py  object_naming.py  storage_service.py
scrapy_project/legal_scraper/spiders/: workplace_relations.py
scripts/: bootstrap.sh  bootstrap_dev.py  check_storage.py  run_scrape.py  run_transform.py  wipe_processed.py  wipe_storage.py
src/legal_pipeline/: __init__.py
src/legal_pipeline/application/config/: __init__.py  settings.py
src/legal_pipeline/application/logging/: logger.py
src/legal_pipeline/application/services/: date_utils.py  hash_service.py  partition_service.py  record_serializer.py  search_plan_service.py
src/legal_pipeline/application/use_cases/: run_scrape.py  run_transform.py
src/legal_pipeline/domain/entities/: record.py  scrape_status.py  search_criteria.py
src/legal_pipeline/domain/repositories/: metadata_repository.py
src/legal_pipeline/domain/storage/: __init__.py  object_storage.py
src/legal_pipeline/infrastructure/db/: mongo_repository.py
src/legal_pipeline/infrastructure/object_store/: minio_storage.py
src/legal_pipeline/infrastructure/orchestration/: __init__.py  dagster_defs.py
src/legal_pipeline/infrastructure/scrapy_project/: items.py  object_naming.py  pipelines.py  query_builder.py  settings.py
src/legal_pipeline/infrastructure/scrapy_project/spiders/: __init__.py  workplace_relations_spider.py
src/legal_pipeline/infrastructure/transformers/: __init__.py  html_cleaner.py
src/legal_pipeline/interfaces/cli/: main.py
tests/: conftest.py  fakes.py  test_cli.py  test_dagster_defs.py  test_landing_zone_pipeline.py  test_partition_service.py  test_query_builder.py  test_run_transform.py  test_search_plan_service.py  test_workplace_relations_spider.py
tests/integration/: test_minio_storage.py  test_mongo_repository.py  test_spider_flow.py  test_transform_flow.py
tests/unit/: test_dedup_service.py  test_hashing.py  test_html_cleaning.py  test_partition_service.py
transformation/: transform.py
