[project]
name = "legal-cases-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Charbel Saliba",email = "charbel_cg@outlook.com"}
]
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.14.2,<3.0.0)",
    "ipython (>=9.12.0,<10.0.0)"
]

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2.0.0",
    "ruff>=0.12.12,<0.13.0",
]

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["legal_cases_scraper"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = ["legal_cases_scraper/legal_cases_scraper"]
mypy_path = ["legal_cases_scraper"]
explicit_package_bases = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "itemadapter.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
